--- a/css/index.css
+++ b/css/index.css
@@ -1,40 +1,176 @@
 body {
     margin: 0;
+    overflow-x: hidden;
+}
+button {
+    outline: none;
+    border: none;
+    padding: .5rem;
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+    font-weight: bold;
+}
+
+
+a:hover{
+    cursor:pointer;
+}
+a {
+    z-index: 9923423;
+    text-decoration: none;
+    height: fit-content;
+    width: fit-content;
 }
 body * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-h1{color: white;}
-h2{background-color: #f87073; color: rgb(45, 45, 45);}
-h3{color: rgb(45, 45, 45);}
-h4{color: #2c92ff;}
 
-.top{
+
+.top {
     display: flex;
     width: 100vw;
+
 }
-.navitemsa{
+
+.navitemsa {
     display: flex;
     width: fit-content;
     margin: auto;
-    margin-right: 0;
+    margin-right: 0.5rem;
 }
-.navitemsa h3 {
+
+.navitemsa a {
     display: flex;
-    margin-right: 1em;
+    margin-right: 1rem;
     color: white;
     border-radius: 20px;
-    background-color: #42b3fe;
-    padding: 0.3em;
+    background-color: #2c92ff;
+    padding: 0.4rem;
+    width: fit-content;
+    text-align: center;
 
 }
-#navbackg{
-    width: 700px;
-    height: 500px;
-    border-radius: 99px;
-    position: absolute;
-    right: -3em;
-    top: -1em;
+#navbackg {
+    width: 100%;
+    height: 900px;
+    position: absolute; 
+    top: -10rem; 
+    min-width: 1920px;
     z-index: -1;
-    background-image: url("./img/genericnavbackg.png");
+    src: url("../img/genericnavbackg.png");
+    background-size: auto; 
+    background-position: left center; 
+    background-repeat: no-repeat; 
+}
+
+.navitemsi {
+    display: flex;
+    width: fit-content;
+    margin: auto;
+    margin-left: 0;
+    margin-top: 0;
+    margin-left: 1rem;
+}
+
+.navitemsi img {
+    max-height: 45px;
+    max-width: 45px;
+    min-height: 45px;
+    min-width: 45px;
+    padding-top: 0;
+    padding: 0.3rem;
+
+}
+.navsec{
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+}
+section {
+    z-index: -1233123;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.maininfo {
+    color: white;
+    height: 25%;
+    width: 25%;
+    padding: 2rem;
+    margin-left: 10vw;
+    margin-top: 10vh;
+
+}
+.maininfo button {
+    border-radius: 20px;
+    background-color: #2c92ff;
+    color: white;
+}
+
+.maininfo h1, p {
+    color: black;
+    width: 100%;
+    font-weight: 200;
+}
+.maininfo h1 {
+    font-size: 40px;
+    font-weight: bolder;
+    color: #2d2d2d;
+}
+.maininfo * {
+    display: block;
+    width: fit-content;
+    margin: auto;
+    text-align: left;
+    margin-top: .7rem;
+}
+.maininfo button {
+    margin-left: 0;
+}
+section h1{
+    margin-top: 0;
+}
+.spacer {
+    height: 20rem;
+}
+
+@media only screen and (max-width:1000px){ /* mobile opt */
+
+#navbackg {
+    display: none;
+}
+.maininfo{
+    margin: auto;
+    width: 50vw;
+    margin-top: 10rem;
+}
+.maininfo h1{
+    font-size: 60px;
+}
+.maininfo p {
+    font-size: 25px;
+}
+.maininfo button {
+    display: block;
+    width: fit-content;
+    padding: .6rem;
+    font-size: 30px;
+    margin: auto;
+    margin-top: 1vh;
+
+
+}
+.maininfo *{
+    margin-top: .7vh;
+    text-align: center;;
+}
+.navitemsa a{
+    padding: .7rem;
+    font-size: 25px;
+    margin-right: 0.3rem;
+}
+.navitemsi img{
+    padding-top: 1.8rem;
+
+}
 }
